# awesome-HdBO-algorithms

./: .gitignore  FINAL_ALIGNMENT_SUMMARY.md  FINAL_SUMMARY.md  HDBO_IMPLEMENTATION_SUMMARY.md  HDBO_METHODS_FINAL.md  HESBO_FIX.md  IMPLEMENTATION_COMPLETE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SHAPE_CONSISTENCY_SUMMARY.md  TURBO_ALIGNMENT.md  pyproject.toml  requirements.txt  setup.py  test_hdbo_imports.py  test_hesbo_projection.py  test_new_hdbo_only.py  test_shapes_manual.py
bo_methods/: __init__.py  alebo.py  als_bo.py  as_hesbo.py  as_hesbo_v2.py  base.py  baxus.py  bi_hesbo.py  bi_hesbo_v2.py  boss_essi_bo.py  boss_essi_bo_v2.py  bounce.py  dsa.py  eci_bo.py  essi_bo.py  gpoe_bo.py  gpoe_turbo.py  hds.py  hesbo.py  lasso_bo.py  lsbo.py  mcts_vs.py  mgp.py  random_line_bo.py  rembo.py  robust_gp_bo.py  saasbo.py  solid.py  standard_bo.py  turbo.py  turbo_m.py  utils.py  vanilla_bo.py  vsbo.py
docs/: METHOD_COMPARISON.md  SHAPE_GUARANTEES.md  USAGE.md
examples/: all_hdbo_methods_demo.py  basic_example.py  hdbo_methods_example.py
llm_methods/: __init__.py  base.py  bopro.py  llambo.py  llinbo.py  opro.py  sllmbo.py
llm_methods/vbo/: __init__.py  acquisition.py  optimization.py  surrogate.py  vbo_optimizer.py
tests/: __init__.py  test_shape_consistency.py  test_standard_bo.py
